# noye

./: .env  .gitignore  Cargo.toml  README.md
app/: Cargo.toml  README.md
app/src/: main.rs
lib/common/: Cargo.toml  README.md
lib/common/src/: lib.rs
lib/config/: Cargo.toml
lib/const/: Cargo.toml  README.md
lib/const/src/: lib.rs
lib/monitor/: Cargo.toml  README.md
lib/monitor/src/: lib.rs  monitor.rs
lib/monitor/src/monitor/: http.rs  smtp.rs
lib/storage/: Cargo.toml
lib/storage-init/: Cargo.toml  README.md
lib/storage-init/migrations/: 20251210123832_create_monitor_logs_table.down.sql  20251210123832_create_monitor_logs_table.up.sql  20251210123841_create_monitor_config_table.down.sql  20251210123841_create_monitor_config_table.up.sql  20251210123841_create_monitor_configs_table.down.sql  20251210123841_create_monitor_configs_table.up.sql
lib/storage-init/src/: lib.rs
lib/storage/app/: Cargo.toml  README.md
lib/storage/app/src/: lib.rs
lib/storage/init/: Cargo.toml
lib/storage/init/src/: lib.rs
lib/storage/migration/: Cargo.toml
lib/storage/migration/src/: lib.rs  m20251210_134339_create_monitor_logs.rs
lib/storage/src/: core.rs  lib.rs
lib/storage/src/core/: database.rs  monitor_config.rs
lib/web/: Cargo.toml  README.md
lib/web/src/: lib.rs
tools/: devdb.sh
