[package]
name = "noye-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
noye-config = { path = "../config" }
noye-storage = { path = "../storage" }

reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread", "sync"] }
