[package]
name = "noye-storage-init"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7", default-features = false }
noye-storage = { path = "../storage" }

sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
